# sklearn-trees-bench

./: .gitignore  .gitmodules  AGENTS.md  README.md  SETUP.md  USAGE_EXAMPLES.md  example_config.json  pyproject.toml  visualize_results.ipynb
configs/: many_features.json  tree_building.json
sklearn_trees_bench/: __init__.py  compare.py  orchestrate.py  train_model.py
