[project]
name = "sklearn-trees-bench"
version = "0.1.0"
description = "Benchmark suite for scikit-learn decision trees, random forests, and other tree based models"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ninja>=1.13.0",
]

[project.scripts]
train-model = "sklearn_trees_bench.train_model:main"
orchestrate = "sklearn_trees_bench.orchestrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
